2017-06-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* incpath.c (add_sysroot_to_chain): Allow for $SYSROOT prefix.
	* doc/cppdiropts.texi (-I @var{dir}): Document it.

2016-06-22  Richard Biener  <rguenther@suse.de>

	* tree-vect-loop.c (vect_model_reduction_cost): Handle
	COND_REDUCTION and INTEGER_INDUC_COND_REDUCTION without
	REDUC_MAX_EXPR support.
	(vectorizable_reduction): Likewise.
	(vect_create_epilog_for_reduction): Likewise.

2017-06-22  James Greenhalgh  <james.greenhalgh@arm.com>

	* match.pd (A / (1 << B) -> A >> B): New.
	* generic-match-head.c: Include optabs-tree.h.
	* gimple-match-head.c: Likewise.
	* optabs-tree.h (target_supports_op_p): New.
	* optabs-tree.c (target_supports_op_p): New.

2017-06-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (gcc_cv_ld_static_dynamic): Also check stderr for
	$gcc_cv_ld --help output.
	(gcc_cv_ld_demangle): Likewise.
	(gcc_cv_ld_eh_frame_hdr): Likewise.
	(gcc_cv_ld_pie): Likewise.
	(gcc_cv_ld_as_needed): Likewise.  Prefer native forms unless $gnu_ld.
	(gcc_cv_ld_buildid): Likewise.
	(gcc_cv_ld_sysroot): Likewise.
	(ld_bndplt_support): Likewise.
	(ld_pushpopstate_support): Likewise.
	* configure: Regenerate.
	* config/sol2.h [!USE_GLD] (SYSROOT_SPEC): Define.

2017-06-21  Jakub Jelinek  <jakub@redhat.com>

	PR target/81151
	* config/i386/sse.md (round<mode>2): Renumber match_dup and
	operands indexes to avoid gap between operands and match_dups.

2017-06-21  Andrew Pinski  <apinski@cavium.com>

	* config/aarch64/aarch64-cost-tables.h (thunderx_extra_costs):
	Increment Arith_shift and Arith_shift_reg by 1.
	* config/aarch64/aarch64-tuning-flags.def (cheap_shift_extend):
	New tuning flag.
	* config/aarch64/aarch64.c (thunderx_tunings): Enable
	AARCH64_EXTRA_TUNE_CHEAP_SHIFT_EXTEND.
	(aarch64_strip_extend): Add new argument and test for it.
	(aarch64_cheap_mult_shift_p): New function.
	(aarch64_rtx_mult_cost): Call aarch64_cheap_mult_shift_p and don't
	add a cost if it is true.