@@ -1,3 +1,8 @@
+2017-06-22  Jan Hubicka <hubicka@ucw.cz>
+
+	* profile-count.h (apply_probability,
+	apply_scale, probability_in): Fix checks for zero.
+
 2017-06-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* incpath.c (add_sysroot_to_chain): Allow for $SYSROOT prefix.
